--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -2153,6 +2153,6 @@
     <string name="author">Автор</string>
     <string name="keywords">Ключевые слова</string>
     <string name="creator">Создатель</string>
-    <string name="privacy_deep_clean">Конфиденциальность Глубокая очистка</string>
+    <string name="privacy_deep_clean">Глубокая очистка</string>
     <string name="privacy_deep_clean_sub">Удалить все доступные метаданные для этого документа.</string>
 </resources>
