--- a/core/resources/src/main/res/values-be/strings.xml
+++ b/core/resources/src/main/res/values-be/strings.xml
@@ -2155,4 +2155,7 @@
     <string name="creator">Творца</string>
     <string name="privacy_deep_clean">Прыватнасць Deep Clean</string>
     <string name="privacy_deep_clean_sub">Ачысціць усе даступныя метаданыя для гэтага дакумента</string>
+    <string name="page">старонка</string>
+    <string name="deep_ocr">Глыбокае OCR</string>
+    <string name="deep_ocr_sub">Выняць тэкст з дакумента і захаваць яго ў адным тэкставым файле з дапамогай рухавіка Tesseract</string>
 </resources>
