--- a/core/resources/src/main/res/values-ca/strings.xml
+++ b/core/resources/src/main/res/values-ca/strings.xml
@@ -2153,4 +2153,7 @@
     <string name="creator">Creador</string>
     <string name="privacy_deep_clean">Neteja profunda de privadesa</string>
     <string name="privacy_deep_clean_sub">Esborra totes les metadades disponibles per a aquest document</string>
+    <string name="page">Pàgina</string>
+    <string name="deep_ocr">OCR profund</string>
+    <string name="deep_ocr_sub">Extraieu text del document i emmagatzemeu-lo en un fitxer de text mitjançant el motor Tesseract</string>
 </resources>
