--- a/core/resources/src/main/res/values-da/strings.xml
+++ b/core/resources/src/main/res/values-da/strings.xml
@@ -2153,4 +2153,7 @@
     <string name="creator">Skaber</string>
     <string name="privacy_deep_clean">Privatliv Deep Clean</string>
     <string name="privacy_deep_clean_sub">Ryd alle tilgængelige metadata for dette dokument</string>
+    <string name="page">Side</string>
+    <string name="deep_ocr">Dyb OCR</string>
+    <string name="deep_ocr_sub">Uddrag tekst fra dokument og gem den i den ene tekstfil ved hjælp af Tesseract-motoren</string>
 </resources>
