--- a/core/resources/src/main/res/values-et/strings.xml
+++ b/core/resources/src/main/res/values-et/strings.xml
@@ -2153,4 +2153,7 @@
     <string name="creator">Looja</string>
     <string name="privacy_deep_clean">Privaatsus sügavpuhastus</string>
     <string name="privacy_deep_clean_sub">Kustutage kõik selle dokumendi saadaolevad metaandmed</string>
+    <string name="page">Lehekülg</string>
+    <string name="deep_ocr">Sügav OCR</string>
+    <string name="deep_ocr_sub">Ekstraktige dokumendist tekst ja salvestage see Tesseracti mootori abil ühte tekstifaili</string>
 </resources>
