--- a/core/resources/src/main/res/values-fa/strings.xml
+++ b/core/resources/src/main/res/values-fa/strings.xml
@@ -2153,4 +2153,7 @@
     <string name="creator">خالق</string>
     <string name="privacy_deep_clean">حفظ حریم خصوصی Deep Clean</string>
     <string name="privacy_deep_clean_sub">تمام ابرداده های موجود برای این سند را پاک کنید</string>
+    <string name="page">صفحه</string>
+    <string name="deep_ocr">OCR عمیق</string>
+    <string name="deep_ocr_sub">متن را از سند استخراج کرده و با استفاده از موتور Tesseract در یک فایل متنی ذخیره کنید</string>
 </resources>
