--- a/core/resources/src/main/res/values-fil/strings.xml
+++ b/core/resources/src/main/res/values-fil/strings.xml
@@ -2153,4 +2153,7 @@
     <string name="creator">Tagapaglikha</string>
     <string name="privacy_deep_clean">Privacy Deep Clean</string>
     <string name="privacy_deep_clean_sub">I-clear ang lahat ng available na metadata para sa dokumentong ito</string>
+    <string name="page">Pahina</string>
+    <string name="deep_ocr">Malalim na OCR</string>
+    <string name="deep_ocr_sub">I-extract ang text mula sa dokumento at iimbak ito sa isang text file gamit ang Tesseract engine</string>
 </resources>
