--- a/core/resources/src/main/res/values-hu/strings.xml
+++ b/core/resources/src/main/res/values-hu/strings.xml
@@ -2153,4 +2153,7 @@
     <string name="creator">Teremtő</string>
     <string name="privacy_deep_clean">Adatvédelem Deep Clean</string>
     <string name="privacy_deep_clean_sub">Törölje a dokumentum összes elérhető metaadatát</string>
+    <string name="page">oldal</string>
+    <string name="deep_ocr">Mély OCR</string>
+    <string name="deep_ocr_sub">Kivonja a szöveget a dokumentumból, és tárolja azt egyetlen szövegfájlban a Tesseract motor segítségével</string>
 </resources>
