--- a/core/resources/src/main/res/values-it/strings.xml
+++ b/core/resources/src/main/res/values-it/strings.xml
@@ -2153,4 +2153,7 @@
     <string name="creator">Creatore</string>
     <string name="privacy_deep_clean">Privacy Pulizia profonda</string>
     <string name="privacy_deep_clean_sub">Cancella tutti i metadati disponibili per questo documento</string>
+    <string name="page">Pagina</string>
+    <string name="deep_ocr">OCR profondo</string>
+    <string name="deep_ocr_sub">Estrai il testo dal documento e memorizzalo in un unico file di testo utilizzando il motore Tesseract</string>
 </resources>
