--- a/core/resources/src/main/res/values-iw/strings.xml
+++ b/core/resources/src/main/res/values-iw/strings.xml
@@ -2155,4 +2155,7 @@
     <string name="creator">יוֹצֵר</string>
     <string name="privacy_deep_clean">פרטיות ניקוי עמוק</string>
     <string name="privacy_deep_clean_sub">נקה את כל המטא נתונים הזמינים עבור מסמך זה</string>
+    <string name="page">עַמוּד</string>
+    <string name="deep_ocr">OCR עמוק</string>
+    <string name="deep_ocr_sub">חלץ טקסט מהמסמך ואחסן אותו בקובץ הטקסט האחד באמצעות מנוע Tesseract</string>
 </resources>
