--- a/core/resources/src/main/res/values-kk/strings.xml
+++ b/core/resources/src/main/res/values-kk/strings.xml
@@ -2153,4 +2153,7 @@
     <string name="creator">Жаратушы</string>
     <string name="privacy_deep_clean">Құпиялылық Deep Clean</string>
     <string name="privacy_deep_clean_sub">Осы құжат үшін барлық қолжетімді метадеректерді өшіріңіз</string>
+    <string name="page">Бет</string>
+    <string name="deep_ocr">Терең OCR</string>
+    <string name="deep_ocr_sub">Құжаттан мәтінді шығарып, оны Tesseract қозғалтқышының көмегімен бір мәтіндік файлға сақтаңыз</string>
 </resources>
