--- a/core/resources/src/main/res/values-ko/strings.xml
+++ b/core/resources/src/main/res/values-ko/strings.xml
@@ -2152,4 +2152,7 @@
     <string name="creator">창조자</string>
     <string name="privacy_deep_clean">개인 정보 보호 딥 클린</string>
     <string name="privacy_deep_clean_sub">이 문서에 사용 가능한 모든 메타데이터 지우기</string>
+    <string name="page">페이지</string>
+    <string name="deep_ocr">깊은 OCR</string>
+    <string name="deep_ocr_sub">Tesseract 엔진을 사용하여 문서에서 텍스트를 추출하고 하나의 텍스트 파일에 저장합니다.</string>
 </resources>
