--- a/core/resources/src/main/res/values-nl/strings.xml
+++ b/core/resources/src/main/res/values-nl/strings.xml
@@ -2153,4 +2153,7 @@
     <string name="creator">Schepper</string>
     <string name="privacy_deep_clean">Privacy Diep schoon</string>
     <string name="privacy_deep_clean_sub">Wis alle beschikbare metagegevens voor dit document</string>
+    <string name="page">Pagina</string>
+    <string name="deep_ocr">Diepe OCR</string>
+    <string name="deep_ocr_sub">Extraheer tekst uit het document en sla deze op in één tekstbestand met behulp van de Tesseract-engine</string>
 </resources>
