--- a/core/resources/src/main/res/values-pa/strings.xml
+++ b/core/resources/src/main/res/values-pa/strings.xml
@@ -2153,4 +2153,7 @@
     <string name="creator">ਸਿਰਜਣਹਾਰ</string>
     <string name="privacy_deep_clean">ਗੋਪਨੀਯਤਾ ਡੂੰਘੀ ਸਾਫ਼</string>
     <string name="privacy_deep_clean_sub">ਇਸ ਦਸਤਾਵੇਜ਼ ਲਈ ਉਪਲਬਧ ਸਾਰੇ ਮੈਟਾਡੇਟਾ ਨੂੰ ਸਾਫ਼ ਕਰੋ</string>
+    <string name="page">ਪੰਨਾ</string>
+    <string name="deep_ocr">ਡੂੰਘੀ OCR</string>
+    <string name="deep_ocr_sub">ਡੌਕੂਮੈਂਟ ਤੋਂ ਟੈਕਸਟ ਐਕਸਟਰੈਕਟ ਕਰੋ ਅਤੇ ਇਸਨੂੰ ਟੈਸਰੈਕਟ ਇੰਜਣ ਦੀ ਵਰਤੋਂ ਕਰਕੇ ਇੱਕ ਟੈਕਸਟ ਫਾਈਲ ਵਿੱਚ ਸਟੋਰ ਕਰੋ</string>
 </resources>
