--- a/core/resources/src/main/res/values-pl/strings.xml
+++ b/core/resources/src/main/res/values-pl/strings.xml
@@ -2155,4 +2155,7 @@
     <string name="creator">Twórca</string>
     <string name="privacy_deep_clean">Głębokie czyszczenie prywatności</string>
     <string name="privacy_deep_clean_sub">Wyczyść wszystkie dostępne metadane dla tego dokumentu</string>
+    <string name="page">Strona</string>
+    <string name="deep_ocr">Głęboki OCR</string>
+    <string name="deep_ocr_sub">Wyodrębnij tekst z dokumentu i zapisz go w jednym pliku tekstowym za pomocą silnika Tesseract</string>
 </resources>
