--- a/core/resources/src/main/res/values-pt-rBR/strings.xml
+++ b/core/resources/src/main/res/values-pt-rBR/strings.xml
@@ -2153,4 +2153,7 @@
     <string name="creator">Criador</string>
     <string name="privacy_deep_clean">Limpeza Profunda de Privacidade</string>
     <string name="privacy_deep_clean_sub">Limpe todos os metadados disponíveis para este documento</string>
+    <string name="page">Página</string>
+    <string name="deep_ocr">OCR profundo</string>
+    <string name="deep_ocr_sub">Extraia o texto do documento e armazene-o em um arquivo de texto usando o mecanismo Tesseract</string>
 </resources>
