--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -2155,4 +2155,7 @@
     <string name="creator">Создатель</string>
     <string name="privacy_deep_clean">Глубокая очистка</string>
     <string name="privacy_deep_clean_sub">Удалите все доступные метаданные для этого документа</string>
+    <string name="page">Страница</string>
+    <string name="deep_ocr">Глубокое распознавание текста</string>
+    <string name="deep_ocr_sub">Извлеките текст из документа и сохраните его в одном текстовом файле с помощью механизма Tesseract.</string>
 </resources>
