--- a/core/resources/src/main/res/values-si/strings.xml
+++ b/core/resources/src/main/res/values-si/strings.xml
@@ -2154,4 +2154,7 @@
     <string name="creator">නිර්මාතෘ</string>
     <string name="privacy_deep_clean">පෞද්ගලිකත්වය ගැඹුරු පිරිසිදු</string>
     <string name="privacy_deep_clean_sub">මෙම ලේඛනය සඳහා ලබා ගත හැකි සියලුම පාර-දත්ත හිස් කරන්න</string>
+    <string name="page">පිටුව</string>
+    <string name="deep_ocr">ගැඹුරු OCR</string>
+    <string name="deep_ocr_sub">ලේඛනයෙන් පෙළ උපුටා ගෙන එය Tesseract එන්ජිම භාවිතයෙන් එක් පෙළ ගොනුවක ගබඩා කරන්න</string>
 </resources>
