--- a/core/resources/src/main/res/values-sk/strings.xml
+++ b/core/resources/src/main/res/values-sk/strings.xml
@@ -2155,4 +2155,7 @@
     <string name="creator">Tvorca</string>
     <string name="privacy_deep_clean">Ochrana osobných údajov Deep Clean</string>
     <string name="privacy_deep_clean_sub">Vymažte všetky dostupné metadáta pre tento dokument</string>
+    <string name="page">Stránka</string>
+    <string name="deep_ocr">Hlboké OCR</string>
+    <string name="deep_ocr_sub">Extrahujte text z dokumentu a uložte ho do jedného textového súboru pomocou nástroja Tesseract</string>
 </resources>
