--- a/core/resources/src/main/res/values-sr/strings.xml
+++ b/core/resources/src/main/res/values-sr/strings.xml
@@ -2154,4 +2154,7 @@
     <string name="creator">Креатор</string>
     <string name="privacy_deep_clean">Приватност Дееп Цлеан</string>
     <string name="privacy_deep_clean_sub">Обришите све доступне метаподатке за овај документ</string>
+    <string name="page">Страница</string>
+    <string name="deep_ocr">Дубоки ОЦР</string>
+    <string name="deep_ocr_sub">Извуците текст из документа и сачувајте га у једној текстуалној датотеци користећи Тессерацт енгине</string>
 </resources>
