--- a/core/resources/src/main/res/values-sv/strings.xml
+++ b/core/resources/src/main/res/values-sv/strings.xml
@@ -2154,4 +2154,7 @@
     <string name="creator">Skapare</string>
     <string name="privacy_deep_clean">Sekretess Deep Clean</string>
     <string name="privacy_deep_clean_sub">Rensa all tillgänglig metadata för detta dokument</string>
+    <string name="page">Sida</string>
+    <string name="deep_ocr">Djup OCR</string>
+    <string name="deep_ocr_sub">Extrahera text från dokument och lagra den i en textfil med hjälp av Tesseract-motorn</string>
 </resources>
