--- a/core/resources/src/main/res/values-th/strings.xml
+++ b/core/resources/src/main/res/values-th/strings.xml
@@ -2152,4 +2152,7 @@
     <string name="creator">ผู้สร้าง</string>
     <string name="privacy_deep_clean">ความเป็นส่วนตัวอย่างล้ำลึก</string>
     <string name="privacy_deep_clean_sub">ล้างข้อมูลเมตาที่มีอยู่ทั้งหมดสำหรับเอกสารนี้</string>
+    <string name="page">หน้าหนังสือ</string>
+    <string name="deep_ocr">OCR ลึก</string>
+    <string name="deep_ocr_sub">แยกข้อความออกจากเอกสารและจัดเก็บไว้ในไฟล์ข้อความเดียวโดยใช้เครื่องมือ Tesseract</string>
 </resources>
