--- a/core/resources/src/main/res/values-uk/strings.xml
+++ b/core/resources/src/main/res/values-uk/strings.xml
@@ -2155,4 +2155,7 @@
     <string name="creator">Творець</string>
     <string name="privacy_deep_clean">Глибоке очищення конфіденційності</string>
     <string name="privacy_deep_clean_sub">Очистити всі доступні метадані для цього документа</string>
+    <string name="page">Сторінка</string>
+    <string name="deep_ocr">Глибоке OCR</string>
+    <string name="deep_ocr_sub">Витягніть текст із документа та збережіть його в одному текстовому файлі за допомогою механізму Tesseract</string>
 </resources>
