--- a/core/resources/src/main/res/values-vi/strings.xml
+++ b/core/resources/src/main/res/values-vi/strings.xml
@@ -2152,4 +2152,7 @@
     <string name="creator">Người sáng tạo</string>
     <string name="privacy_deep_clean">Quyền riêng tư Sạch sâu</string>
     <string name="privacy_deep_clean_sub">Xóa tất cả siêu dữ liệu có sẵn cho tài liệu này</string>
+    <string name="page">Trang</string>
+    <string name="deep_ocr">OCR sâu</string>
+    <string name="deep_ocr_sub">Trích xuất văn bản từ tài liệu và lưu trữ nó trong một tệp văn bản bằng công cụ Tesseract</string>
 </resources>
