--- a/core/resources/src/main/res/values-zh-rTW/strings.xml
+++ b/core/resources/src/main/res/values-zh-rTW/strings.xml
@@ -2152,4 +2152,7 @@
     <string name="creator">创作者</string>
     <string name="privacy_deep_clean">隐私深度清洁</string>
     <string name="privacy_deep_clean_sub">清除该文档的所有可用元数据</string>
+    <string name="page">页</string>
+    <string name="deep_ocr">深度OCR</string>
+    <string name="deep_ocr_sub">使用 Tesseract 引擎从文档中提取文本并将其存储在一个文本文件中</string>
 </resources>
