--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2177,4 +2177,9 @@
     <string name="page">Page</string>
     <string name="deep_ocr">Deep OCR</string>
     <string name="deep_ocr_sub">Extract text from document and store it in the one text file using Tesseract engine</string>
+    <string name="cant_remove_all">Can\'t remove all pages</string>
+    <string name="remove_pages_pdf">Remove PDF pages</string>
+    <string name="remove_pages_pdf_sub">Remove specific pages from PDF document</string>
+    <string name="tap_to_remove">Tap To Remove</string>
+    <string name="manually">Manually</string>
 </resources>
